--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "explorer",
-  "version": "0.1.0",
-  "private": true,
+  "name": "polkadot-mempool-explorer",
+  "version": "1.0.0",
   "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.4.0",
     "@types/jest": "^26.0.16",
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "@types/react-dom": "^16.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
