--- a/package.json
+++ b/package.json
@@ -2,25 +2,29 @@
   "name": "polkadot-mempool-explorer",
   "version": "1.0.0",
   "dependencies": {
+    "@polkadot/api": "^2.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "typescript": "^4.1.2",
+    "@polkadot/types": "^2.9.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.4.0",
     "@types/jest": "^26.0.16",
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10"
+    "@types/react-dom": "^16.9.10",
+    "typescript": "^4.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "lint": "eslint ./src",
+    "prebuild": "rm -rf dist",
+    "start": "NODE_ENV=development react-scripts start",
+    "build": "NODE_ENV=production react-scripts build",
+    "test": "NODE_ENV=test react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
