--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
 
 # testing
-/coverage
+coverage/
+.nyc_output
+data/
 
 # production
-/build
+build/
+dist/
 
 # misc
 .DS_Store
@@ -24,3 +23,19 @@ yarn-error.log*
 
 # Eslint
 .eslintcache
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
