--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
     "lru-cache": "^6.0.0",
+    "moment": "^2.29.1",
     "pino": "^6.8.0",
     "pino-http": "^5.3.0",
     "pino-pretty": "^4.3.0",
