(Add) more components, linting, etc

--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -61,21 +61,30 @@
     "no-warning-comments": "warn",
     "import/extensions": 0,
     "import/no-unresolved": 0,
-    "import/no-extraneous-dependencies": ["error", { "optionalDependencies": false, "peerDependencies": false }],
-    "import/order": ["error", {
-      "alphabetize": {"order": "asc"},
-      "groups": [
-        ["builtin", "external"],
-        ["internal", "parent", "sibling", "index"]
-      ],
-      "newlines-between": "always",
-      "pathGroups": [
-        {"group": "builtin", "pattern": "react", "position": "before"},
-        {"group": "external", "pattern": "{lodash.debounce,lodash.uniqby,react-router,lodash.clonedeep,moment,apollo-link-retry,apollo-cache-inmemory,apollo-client,apollo-link,apollo-link-http,apollo-link-logger,apollo-link-ws,apollo-utilities,lodash.orderby,react-blockies,lodash.uniqby,@realitio/realitio-lib/formatters/question,@realitio/realitio-lib/formatters/template,@gnosis.pm/conditional-tokens-contracts/utils/id-helpers,@walletconnect/web3-provide,web3modal,polished,react-modal,big-number-input,react-dom/test-utils,@apollo/react-hooks,@react-hook/debounce,react-data-table-component,@apollo/react-testing,@testing-library/dom,@testing-library/user-event,@testing-library/react,react-hook-form,styled-components,ethers/utils,react-dom,react-router-dom,logdown,ethers,ethers/providers,moment-timezone,web3-utils,graphql-tag}", "position": "before"}
-      ],
-      "pathGroupsExcludedImportTypes": ["builtin"]
-    }],
-    "no-restricted-imports": ["error", { "patterns": ["../*", "./*"] }],
+    "import/no-extraneous-dependencies": [
+      "error",
+      { "optionalDependencies": false, "peerDependencies": false }
+    ],
+    "import/order": [
+      "error",
+      {
+        "alphabetize": { "order": "asc" },
+        "groups": [
+          ["builtin", "external"],
+          ["internal", "parent", "sibling", "index"]
+        ],
+        "newlines-between": "always",
+        "pathGroups": [
+          { "group": "builtin", "pattern": "react", "position": "before" },
+          {
+            "group": "external",
+            "pattern": "{lodash.debounce,lodash.uniqby,react-router,lodash.clonedeep,moment,lodash.orderby,polished,react-modal,big-number-input,react-dom/test-utils,react-hook-form,styled-components,react-dom,react-router-dom,logdown,moment-timezone}",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["builtin"]
+      }
+    ],
     "import/prefer-default-export": 0,
     "sort-destructure-keys/sort-destructure-keys": 2,
     "react/jsx-label-has-associated-control": 0,
