--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "husky": "^4.3.6",
     "polished": "^4.0.5",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "sanitize.css": "^12.0.1",
@@ -22,6 +23,7 @@
     "@types/jest": "^26.0.16",
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^16.9.10",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
