--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sanitize.css": "^12.0.1",
     "styled-components": "^5.2.1",
@@ -25,6 +26,7 @@
     "@types/react": "^16.14.2",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint-config-prettier": "^7.1.0",
