--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-hooks-identicons": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sanitize.css": "^12.0.1",
