--- a/api/Dockerfile.production
+++ b/api/Dockerfile.production
@@ -5,11 +5,11 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm ci
+RUN npm ci --only=production --no-audit --no-fund
 
 COPY . .
 
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 ENV PATH=$PATH:/home/node/.npm-global/bin
 
-CMD [ "npm", "run", "start" ]
+CMD [ "npm", "run", "start:prod" ]
