--- a/web/Dockerfile.production
+++ b/web/Dockerfile.production
@@ -5,11 +5,15 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm ci
+RUN npm ci --no-audit --no-fund
 
 COPY . .
+
+RUN npm run build
+
+RUN npm prune --production
 
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 ENV PATH=$PATH:/home/node/.npm-global/bin
 
-CMD [ "npm", "run", "start" ]
+CMD [ "npm", "run", "start:prod" ]
