--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,9 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": ">= 14.0.0"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
