--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.1",
     "pino": "^6.8.0",
     "pino-http": "^5.3.0",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
